2009-01-25  David Boddie  <dboddie@trolltech.com>

        Reviewed by Simon Hausmann.

        Doc: Fixed the terminology used.

        * Api/qwebpage.cpp:

2009-01-25  Thiago Macieira  <thiago.macieira@nokia.com>

        Reviewed by Simon Hausmann.

        Rename links from trolltech.com to qtsoftware.com

        * Api/qwebpluginfactory.cpp:

2009-01-25  Tor Arne Vestbø  <tavestbo@trolltech.com>

        Reviewed by Simon Hausmann.

        Make QWebPage auto-test more robust by cleaning up generated files

        Sometimes the auto-test may segfault, leaving behind files because the
        call to cleanupTestCase() never happens, so we also clean up the files
        at initTestCase() just to make sure we're running in a clean environment.

        * tests/qwebpage/tst_qwebpage.cpp:
        (tst_QWebPage::cleanupFiles):
        (tst_QWebPage::initTestCase):
        (tst_QWebPage::cleanupTestCase):

2008-12-20  Urs Wolfer  <uwolfer@kde.org>

        Reviewed by Simon Hausmann.

        Fix: compile qwebhistory.h with pendantic comiler flag.

        https://bugs.webkit.org/show_bug.cgi?id=22947

        * Api/qwebhistory.h:

2009-01-24  Adam Treat  <adam.treat@torchmobile.com>

        Oops, fix the Qt build.

        * Api/qwebframe.cpp:
        (QWebFrame::render):

2009-01-24  Adam Treat  <adam.treat@torchmobile.com>

        Reviewed by Nikolas Zimmermann.

        Add QWebFrame::renderContents() method which allows arbitary rendering
        of any content region within the QWebFrame.  It also does not draw any
        scrollbars.

        * Api/qwebframe.cpp:
        (QWebFrame::renderContents):
        * Api/qwebframe.h:

2009-01-23  Ariya Hidayat  <ariya.hidayat@trolltech.com>

        Reviewed by Simon Hausmann.

        Make the test more robust by taking into account the platform-specific
        cursor flashing time.

        * tests/qwebframe/tst_qwebframe.cpp:

2009-01-20  Friedemann Kleint  <Friedemann.Kleint@nokia.com>
